<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.dryunchik.news.activity.MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:orderInCategory="2"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="1"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="4"
        android:title="@string/delete_all"
        app:showAsAction="never" />

    <item
        android:title="@string/action_setting"
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
