<?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:layout_margin="4dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_image"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:scaleType="centerCrop"/>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tv_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:textColor="@android:color/black"
                        android:text="@string/save" />
                </FrameLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@android:color/black"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/tv_published_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>

